--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,65 +1,61 @@
 <idea-plugin>
-    <id>syncfiles</id> <!-- 推荐使用公司或个人域名反转作为前缀，避免冲突 -->
+    <id>syncfiles</id>
     <name>SyncFiles</name>
-    <!-- 更新到新版本号 -->
-    <version>3.2.0</version>
+    <version>3.3.0</version>
     <vendor email="sammilergood@gmail.com" url="https://cplusplusbug.org">sammiler</vendor>
 
-    <!-- 从 README 提取并格式化的描述 -->
+    <!-- ↓↓↓ 使用纯英文描述以满足 Marketplace 要求 ↓↓↓ -->
     <description><![CDATA[
-    <b>SyncFiles</b> 是一款为 IntelliJ IDEA (及兼容IDE如CLion) 设计的轻量级插件，用于简化从 GitHub 仓库同步文件和目录到您本地项目的过程。<br/>
-    无论是拉取代码片段、模板还是整个文件夹，SyncFiles 都通过用户友好的界面和可定制的设置来简化操作。<br/>
+    <b>SyncFiles</b> is a lightweight plugin for IntelliJ IDEA (and compatible IDEs like CLion) designed to simplify syncing files and directories from GitHub repositories to your local project.<br/>
+    Whether pulling code snippets, templates, or entire folders, SyncFiles streamlines the process with a user-friendly interface and customizable settings.<br/>
     <br/>
-    <b>主要功能:</b>
+    <b>Key Features:</b>
     <ul>
-        <li><b>GitHub 文件/目录同步</b>: 支持从 GitHub 仓库下载单个文件 (raw.githubusercontent.com URL) 或整个目录 (/tree/ 链接)。</li>
-        <li><b>自定义映射</b>: 配置源 URL 和目标路径，将文件同步到项目中的指定位置。</li>
-        <li><b>Python 脚本执行</b>: 在工具窗口中列出并执行指定目录下的本地 Python (*.py) 脚本。</li>
-        <li><b>环境变量</b>: 为执行的 Python 脚本配置自定义环境变量。</li>
-        <li><b>目录监控</b>: 自动监控配置的 Python 脚本目录，当脚本文件发生变化时刷新工具窗口中的按钮列表。</li>
-        <li><b>项目自动刷新</b>: 同步或执行脚本后自动刷新 IDE 的虚拟文件系统，确保更改立即可见。</li>
-        <li><b>工具窗口集成</b>: 通过右侧边栏的 "SyncFiles" 工具窗口一键启动同步或执行脚本。</li>
-        <li><b>多实例隔离</b>: 正确处理多个 IDE 窗口（项目），确保每个项目的配置和监控是独立的。</li>
+        <li><b>GitHub File/Directory Sync</b>: Download individual files (raw.githubusercontent.com URLs) or entire directories (/tree/ links) from GitHub repositories.</li>
+        <li><b>Custom Mappings</b>: Configure source URLs and target paths to sync files to specific locations in your project.</li>
+        <li><b>Python Script Execution</b>: List and execute local Python (*.py) scripts from a specified directory within the tool window.</li>
+        <li><b>Environment Variables</b>: Configure custom environment variables for executed Python scripts.</li>
+        <li><b>Directory Monitoring</b>: Automatically monitors the configured Python script directory and refreshes the tool window button list upon changes.</li>
+        <li><b>Project Auto-Refresh</b>: Automatically refreshes the IDE's virtual file system after sync or script execution to ensure changes are immediately visible.</li>
+        <li><b>Tool Window Integration</b>: Initiate sync or script execution with a single click from the dedicated "SyncFiles" tool window (right sidebar).</li>
+        <li><b>Multi-Instance Isolation</b>: Correctly handles multiple IDE windows (for different projects or multiple windows for the same project), ensuring isolated configuration, monitoring, and UI updates.</li>
     </ul>
     <br/>
-    请前往 `File > Settings (文件 > 设置) > SyncFiles Settings` 进行配置。<br/>
-    需要 IntelliJ IDEA 2024.1 或更高版本。
+    Configure the plugin via `File > Settings > Tools > SyncFiles Settings`.<br/>
+    Requires IntelliJ IDEA 2024.1 or later.
     ]]></description>
 
-    <!-- 更新日志 -->
+    <!-- 更新日志 (可以保留中文，但英文更佳) -->
     <change-notes><![CDATA[
     <b>Version 3.2.0</b>
     <ul>
-      <li>修复: 解决了在多个 IDE 实例中打开时配置和目录监控混乱的问题 (Project Scoping)。</li>
-      <li>修复: 修正了在合并目录时比较完全相同文件可能导致的 `fromIndex > toIndex` 错误 (ArrayIndexOutOfBoundsException)。</li>
-      <li>改进: 增强了文件/目录同步过程中的错误处理和进度显示。</li>
-      <li>改进: 使用 `backgroundPostStartupActivity` 在后台线程执行启动初始化，避免阻塞 UI。</li>
-      <li>改进: 优化了设置界面的用户体验和输入验证。</li>
+      <li>Fix: Resolved UI update confusion when opening multiple windows for the same project (by operating on window-specific UI components).</li>
+      <li>Fix: Resolved configuration and directory monitoring conflicts when opening multiple IDE instances (different projects) using Project Scoping.</li>
+      <li>Fix: Corrected potential `ArrayIndexOutOfBoundsException` (fromIndex > toIndex) when comparing identical files during directory merge.</li>
+      <li>Improvement: Enhanced error handling and progress display during file/directory synchronization.</li>
+      <li>Improvement: Used `backgroundPostStartupActivity` for startup initialization on a background thread to avoid blocking the UI.</li>
+      <li>Improvement: Optimized settings UI experience and input validation.</li>
     </ul>
-    <b>Version 3.1.0 及更早版本</b>
+    <b>Version 3.1.0 and earlier</b>
     <ul>
-      <li>初始版本，支持 GitHub 文件和目录同步。</li>
-      <li>增加了本地 Python 脚本执行和目录监控功能。</li>
-      <li>修复了早期版本中的配置初始化和快捷键相关问题 (注意：快捷键直接触发同步的功能仍在开发中)。</li>
+      <li>Initial release with GitHub file and directory sync support.</li>
+      <li>Added local Python script execution and directory monitoring features.</li>
+      <li>Fixed configuration initialization and shortcut-related issues in earlier versions.</li>
     </ul>
     ]]></change-notes>
 
     <!-- 兼容性 -->
-    <idea-version since-build="241" until-build="251.*"/> <!-- 使用 241 而不是 241.0 更常见 -->
+    <idea-version since-build="241" until-build="251.*"/>
 
     <!-- 核心平台依赖 -->
     <depends>com.intellij.modules.platform</depends>
 
     <!-- 扩展点实现 -->
     <extensions defaultExtensionNs="com.intellij">
-        <!-- 每个项目一个的服务，用于管理 Watcher -->
         <projectService serviceImplementation="com.example.syncfiles.ProjectDirectoryWatcherService"/>
-        <!-- 项目启动后在后台运行的活动 -->
         <backgroundPostStartupActivity implementation="com.example.syncfiles.WatcherInitializerActivity"/>
-        <!-- 工具窗口 -->
         <toolWindow id="SyncFiles" secondary="true" anchor="right" icon="/icons/syncToolWindow.svg"
-                    factoryClass="com.example.syncfiles.SyncFilesToolWindowFactory"/> <!-- 添加了一个图标 -->
-        <!-- 设置界面 -->
+                    factoryClass="com.example.syncfiles.SyncFilesToolWindowFactory"/>
         <projectConfigurable id="com.example.syncfiles.SyncFilesSettings"
                              displayName="SyncFiles Settings"
         instance="com.example.syncfiles.SyncFilesSettingsConfigurable"/>
@@ -69,11 +65,8 @@
     <actions>
         <action id="SyncFiles.ManualSync" class="com.example.syncfiles.SyncAction" text="Sync GitHub Files Now"
                 description="Manually triggers file synchronization from GitHub based on settings."
-                icon="AllIcons.Actions.CheckOut"> <!-- 添加图标 -->
-            <!-- 添加到 Tools 菜单 -->
+                icon="AllIcons.Actions.CheckOut">
             <add-to-group group-id="ToolsMenu" anchor="last"/>
-            <!-- 也可以添加到主工具栏 -->
-            <!-- <add-to-group group-id="MainToolBar" anchor="last"/> -->
         </action>
     </actions>
 
