feat(watcher): 优化文件监控服务并添加新功能
-重构 FileChangeEventWatcherService 类，提高代码质量和可维护性
-增加对相对路径和绝对路径的支持
- 改进日志输出，提高可读性和信息量
- 优化脚本执行逻辑，增加错误处理和日志记录
- 重构 ProjectDirectoryWatcherService 类，提高代码质量
- 增加新功能：自动添加新创建的 .py 文件到默认脚本组
- 更新 plugin.xml，移除不必要的 groupId 属性

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -105,8 +105,7 @@
         <!-- Settings Page -->
         <projectConfigurable id="com.example.syncfiles.SyncFilesSettings"
                              displayName="SyncFiles Settings"
-                             instance="com.example.syncfiles.SyncFilesSettingsConfigurable"
-                             groupId="tools"/>
+                             instance="com.example.syncfiles.SyncFilesSettingsConfigurable"/>
     </extensions>
 
 
