refactor(terminal): 适配新版 Terminal API 并保持向后兼容
- 更新 plugin.xml 中的 terminal 依赖为非可选- 重构 findOrCreateTerminalWidget 方法以适配新 API
- 添加对新 API 中 JBTerminalWidget 的支持
- 保留对旧 API 的兼容性
- 优化终端标签页的复用逻辑
- 改进错误处理和日志记录

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -87,7 +87,7 @@
 
     <depends>com.intellij.modules.platform</depends>
     <!-- 如果使用了 TerminalView API，可能需要明确依赖 Terminal 插件 -->
-    <depends optional="true" config-file="syncfiles-terminal.xml">org.jetbrains.plugins.terminal</depends>
+    <depends>org.jetbrains.plugins.terminal</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <!-- Project Level Services -->
