--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -43,11 +43,15 @@
     ]]></description>
 
     <change-notes><![CDATA[
-            <b>Version 4.0.2</b>
+    <b>Version 4.1.0</b>
+    <ul>
+    <li>Replaced VFS-based file listeners with Java native <code>java.nio.file.WatchService</code> for significantly improved real-time event detection and responsiveness.</li>
+    </ul>
+    <b>Version 4.0.2</b>
     <ul>
         <li><b>Python Scripts On Modify Supports Absolute Path</li>
     </ul>
-        <b>Version 4.0.1</b>
+    <b>Version 4.0.1</b>
     <ul>
         <li><b>Bug Fixes</li>
     </ul>
