feat(syncfiles): 添加智能工作流配置和同步功能
- 新增智能工作流配置加载功能，支持从 YAML 文件中读取配置- 实现文件下载完成通知机制
- 更新项目监听服务，支持新的文件同步功能
- 添加自定义图标和版本号更新

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>syncfiles</id> <!-- 您的插件ID -->
     <name>SyncFiles</name> <!-- 您的插件名称 -->
-    <version>4.1.0</version> <!-- 新版本号 -->
+    <version>4.2.0</version> <!-- 新版本号 -->
     <vendor email="sammilergood@gmail.com" url="https://cplusplusbug.org">sammiler</vendor>
 
     <description><![CDATA[
@@ -118,6 +118,7 @@
         <projectService serviceImplementation="com.example.syncfiles.ProjectDirectoryWatcherService"/>
         <projectService serviceImplementation="com.example.syncfiles.FileChangeEventWatcherService"/>
         <projectService serviceImplementation="com.example.syncfiles.ProjectWatcherService"/>
+        <projectService serviceImplementation="com.example.syncfiles.logic.SmartWorkflowService"/>
         <!-- Startup Activity -->
         <backgroundPostStartupActivity implementation="com.example.syncfiles.WatcherInitializerActivity"/>
 
