feat(plugin): 添加智能加载配置功能并优化环境变量解析
- 在 plugin.xml 中添加了 Smart Action按钮，用于快速智能加载插件状态/配置
-优化了环境变量解析，使用 Util.isDirectoryAfterMacroExpansion 方法处理项目路径

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -43,6 +43,10 @@
     ]]></description>
 
     <change-notes><![CDATA[
+    <b>Version 4.2.0</b>
+    <ul>
+    <li>Added a Smart Action button to quickly and intelligently load plugin state/configuration</li>
+    </ul>
     <b>Version 4.1.0</b>
     <ul>
     <li>Replaced VFS-based file listeners with Java native <code>java.nio.file.WatchService</code> for significantly improved real-time event detection and responsiveness.</li>
